Make java packages accessible to existing tests